# m3-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  mod.rs  plots.rs
src/models/: base_model.rs  mod.rs  rmm_01.rs
