[package]
name = "sol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi = "0.1.0"
alloy-json-abi = "0.1.0"
alloy-primitives = "0.2.0"
alloy-rlp = "0.2.0"
alloy-rlp-derive = "0.2.0"
alloy-sol-macro = "0.2.0"
alloy-sol-types = "0.2.0"
hex-literal = "0.4.1"

